More products, stores for testing

--- a/products.yaml
+++ b/products.yaml
@@ -1,5 +1,10 @@
 - 
-  name: "Bowling Alone (2001)"
+  name: "Bowling Alone, Robert D. Putnam (2001)"
   urls: 
     - "http://www.amazon.com/Bowling-Alone-Collapse-American-Community/dp/0743203046/"
     - "http://product.half.ebay.com/Bowling-Alone-The-Collapse-and-Revival-of-American-Community-by-Robert-D-Putnam-2001-Paperback/1812266&tg=info"
+-
+  name: "Average Is Over, Tyler Cowen (2013)"
+  urls:
+    - "http://www.barnesandnoble.com/w/average-is-over-tyler-cowen/1114924440?ean=9780525953739"
+    - "http://product.half.ebay.com/Average-Is-Over-Powering-America-Beyond-the-Age-of-the-Great-Stagnation-by-Tyler-Cowen-2013-Hardcover/167524221&tg=info"
